# transcribe-worker

./: .gitignore  Dockerfile  README.md  download_models.sh  main.py  oidc_get_token.py  pyproject.toml  requirements.txt  settings.py
utils/: args.py  inference.py  job.py  log.py  settings.py  subtitles.py  whisper.py  whisper2.py
