[project]
name = "transcribe-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daemonize>=2.5.0",
    "gpustat>=1.1.1",
    "pyannote-audio>=4.0.1",
    "pydantic-settings>=2.12.0",
    "torch",
    "transformers",
]

