[project]
name = "transcribe-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.3.2",
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "asteroid-filterbanks==0.4.0",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "blessed==1.22.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorlog==6.9.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "daemonize==2.5.0",
    "docopt==0.6.2",
    "einops==0.8.1",
    "filelock==3.18.0",
    "fonttools==4.58.2",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "gpustat==1.1.1",
    "gputil==1.4.0",
    "hf-xet==1.1.3",
    "huggingface-hub==0.32.4",
    "hyperpyyaml==1.2.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "julius==0.2.7",
    "kiwisolver==1.4.8",
    "lightning==2.5.1.post0",
    "lightning-utilities==0.14.3",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.4.4",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "nvidia-ml-py==13.580.82",
    "omegaconf==2.3.0",
    "optuna==4.3.0",
    "packaging==24.2",
    "pandas==2.3.0",
    "pathlib==1.0.1",
    "pillow==11.2.1",
    "primepy==1.3",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.1.1",
    "pyannote-audio==3.3.2",
    "pyannote-core==5.0.0",
    "pyannote-database==5.1.3",
    "pyannote-metrics==3.2.1",
    "pyannote-pipeline==3.0.1",
    "pycparser==2.22",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytorch-lightning==2.5.1.post0",
    "pytorch-metric-learning==2.8.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "semver==3.0.4",
    "sentencepiece==0.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "speechbrain==1.0.3",
    "sqlalchemy==2.0.41",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboardx==2.6.2.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "tomli==2.2.1",
    "torch==2.7.1",
    "torch-audiomentations==0.12.0",
    "torch-pitch-shift==1.2.5",
    "torchaudio==2.7.1",
    "torchmetrics==1.7.2",
    "tqdm==4.67.1",
    "transformers==4.52.4",
    "typer==0.16.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.14",
    "yarl==1.20.1",
]
